--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>synthBot 9001</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/15.1.2/Tone.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
- 
-    <button id="play">Make Noise</button>
-    
- 
 
 </body>
-<script src="script.js"></script>
 
 </html>
